--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "vue-bulma-tabs": "^1.1.2",
     "vue-bulma-tooltip": "^1.0.3",
     "vue-cleave": "1.1.1",
+    "vue-context-menu": "^2.0.6",
     "vue-lory": "0.0.4",
     "vue-nprogress": "0.1.5",
     "vue-peity": "0.5.0",
