--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "axios": "^0.15.3",
     "bulma": "^0.3.2",
     "font-awesome": "4.7.0",
+    "jsonp": "^0.2.1",
     "mdi": "^1.8.36",
+    "ol": "^4.6.5",
+    "ol-contextmenu": "^3.2.0",
     "plotly.js": "^1.24.2",
     "vue": "^2.2.2",
     "vue-axios": "^2.0.1",
