--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test": "echo lol"
   },
   "dependencies": {
+    "@dattn/dnd-grid": "0.0.14",
     "@websanova/vue-auth": "^2.8.2-beta",
     "animate.css": "3.5.2",
     "animejs": "^2.0.1",
@@ -72,7 +73,11 @@
     "vue-cleave": "1.1.1",
     "vue-color": "^2.4.6",
     "vue-context-menu": "^2.0.6",
+    "vue-drag-resize": "^1.3.2",
+    "vue-draggable-resizable": "^1.7.1",
+    "vue-js-grid": "^1.0.1",
     "vue-lory": "0.0.4",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-nprogress": "0.1.5",
     "vue-peity": "0.5.0",
     "vue-router": "^2.3.0",
@@ -85,6 +90,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
+    "autoresponsive-vue": "^1.0.22",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
